--- a/src/index.css
+++ b/src/index.css
@@ -317,3 +317,41 @@ nav > div {
     width: 25%; /* Adjust for extra-large screens */
   }
 }
+
+/* src/styles/onboarding.css */
+.main_content_container {
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+.main_content {
+  flex: 0 0 auto;
+}
+
+.footer {
+  margin-top: auto;
+}
+
+/* 미디어 쿼리로 디바이스 높이에 따른 레이아웃 조정 */
+@media (min-height: 600px) {
+  .main_content_container {
+    padding-top: 20px;
+    padding-bottom: 20px;
+  }
+}
+
+@media (min-height: 800px) {
+  .main_content_container {
+    padding-top: 40px;
+    padding-bottom: 40px;
+  }
+}
+
+@media (min-height: 1000px) {
+  .main_content_container {
+    padding-top: 60px;
+    padding-bottom: 60px;
+  }
+}
