fix : 온보딩 오류 수정 14

--- a/src/index.css
+++ b/src/index.css
@@ -319,5 +319,5 @@ nav > div {
 }
 
 .footer {
-  margin-top: 30%; /* Default margin calculated based on the height of 844px and margin of 250px */
+  margin-top: 30vh; /* Default margin calculated based on the height of 844px and margin of 250px */
 }
